feat(api): streamline cache selection methods and improve result handling